src/test/success/DOS_eol.egern
func sum(a: int, b: int): int {
    return a + b
}
print(sum(4, 5))
