src/test/fail/redeclaring_function_fail.egern
func abc(a: int, b: int, c: int): int {
    print(a)
    var x = b
    return c
}

func abc(a: int, b: int): int {
    print(a)
    return b
}
